--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
     <string name="app_name">Opciones</string>
     <string name="str_No">No.</string>
     <string name="str_Operacion">Operación</string>
-    <string name="str_Datos">Datos</string>
+
+    <string name="str_Resultado">RESULTADO</string>
+    <string name="str_OK">OK</string>
+    <string name="str_Area">Área</string>
 
     // Activity Principal
     <string name="str_Areas">AREAS</string>
@@ -19,6 +22,8 @@
     <string name="str_Rectagulo">RECTÁNGULO</string>
     <string name="str_Triangulo">TRIÁNGULO</string>
     <string name="str_Circulo">CÍRCULO</string>
+    <string name="str_Calcular">Calcular</string>
+    <string name="str_Limpiar">LIMPIAR</string>
 
     <string-array name="str_OpcAreas">
         <item>@string/str_Cuadrado</item>
@@ -26,4 +31,5 @@
         <item>@string/str_Triangulo</item>
         <item>@string/str_Circulo</item>
     </string-array>
+    <string name="str_Datos">Datos</string>
 </resources>
