Volumenes finalizados con fallas

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -16,4 +16,8 @@
     <string name="str_OK">OK</string>
     <string name="str_Rectagulo">RECTANGLE</string>
     <string name="str_Triangulo">TRIANGLE</string>
+    <string name="str_Cilindro">CYLINDER</string>
+    <string name="str_Cono">CONE</string>
+    <string name="str_Cubo">CUBE</string>
+    <string name="str_Esfera">SPHERE</string>
 </resources>
